added styles and fake data to get a basic html site working again before martin comes back with changes

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <nav class="nav">Martin's Aquarium
         <!-- //"/"means right here the page where we are// -->
         <a href="/">Harvested Fish</a>
-        <a href="locations.html/">Locations where Fish were Harvested</a>
+        <a href="locations/locations.html">Locations where Fish were Harvested</a>
     </nav>
 </header>
 <body>
     <h1>Martin's Fish</h1>
     <div class="content">
+        <section class="fishies">
         <article class="fishes">
             
             <p><img class="fishies--image" src="goldie-fish.jpg" alt="image of goldfish"></p>
@@ -72,6 +73,7 @@
 
 
         </article>
+    </section>
         <aside>
             <div class="tip">
                 <h4>Hydration</h4>
