moved main.js into scripts file and got everything working again

--- a/index.html
+++ b/index.html
@@ -132,6 +132,6 @@
     </div>
     <!-- Sidebar of tank tips -->
 
-    <script type="module" src="./main.js"></script>    
+    <script type="module" src="./scripts/main.js"></script>    
 </body>
 </html>
